--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,7 +22,7 @@ services:
             - '../src/Kernel.php'
 
     App\EntityListener\:
-        ressource: "../src/EntityListener/"
+        resource: "../src/EntityListener/"
         tags: ["doctrine.orm.entity_listener"]
     
     App\Form\DataTransformer\FileToStringTransformer:
