--- a/.env
+++ b/.env
@@ -38,3 +38,16 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=6LeJg0wqAAAAAJ2TvMPhPMYIK9-CDjTwkyNHCQT7
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
+
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=6Le_qEwqAAAAADU4ZCok6YgLMAEtSSoz3D0Am4I-
+RECAPTCHA3_SECRET=6Le_qEwqAAAAADg7fv5CP8EIP-mvxNsTH_TV4uB0
+###< karser/karser-recaptcha3-bundle ###
