--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "^4.12",
         "fakerphp/faker": "^1.23",
-        "friendsofsymfony/ckeditor-bundle": "^2.5",
         "karser/karser-recaptcha3-bundle": "^0.1.27",
         "knplabs/knp-paginator-bundle": "^6.4",
         "phpdocumentor/reflection-docblock": "^5.4",
@@ -83,8 +82,8 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd",
-            "ckeditor:install": "symfony-cmd"
+            "importmap:install": "symfony-cmd"
+            
         },
         "post-install-cmd": [
             "@auto-scripts"
