--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=989cedaaf52a8e60b7004fbe9446788f
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/correction?serverVersion=8.0.31&charset=utf8mb4"
-# DATABASE_URL="mysql://admin:Afpa1234@127.0.0.1:3306/thedistrict?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+ DATABASE_URL="mysql://admin:Afpa1234@127.0.0.1:3306/test?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
