--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=989cedaaf52a8e60b7004fbe9446788f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://root:@127.0.0.1:3306/correction?serverVersion=8.0.31&charset=utf8mb4"
- DATABASE_URL="mysql://admin:Afpa1234@127.0.0.1:3306/test?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/correction?serverVersion=8.0.31&charset=utf8mb4"
+ # DATABASE_URL="mysql://admin:Afpa1234@127.0.0.1:3306/test?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
